# OS_Labs

lab1/: report.docx  trace.txt
lab2/doc/: report.docx
lab2/src/: child.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/doc/: laba3_report.docx
lab3/src/: main.c
lab4/: CMakeLists.txt
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/include/: lib.h
lab5/src/: CMakeCache.txt  Makefile  cmake_install.cmake  lib1.c  lib2.c  main  main1  main1.c  main2  main2.c
lab6/: CMakeLists.txt
lab6/src/: calculation.cpp  control.cpp
