cmake_minimum_required(VERSION 3.20)
project(main LANGUAGES CXX)
add_executable(control ./src/control.cpp)
target_compile_options(control PUBLIC -fsanitize=address -g)
target_link_options(control PUBLIC -fsanitize=address -g)
add_executable(calculation ./src/calculation.cpp)
target_compile_options(calculation PUBLIC -fsanitize=address -g)
target_link_options(calculation PUBLIC -fsanitize=address -g)
target_link_libraries(control zmq)
target_link_libraries(calculation zmq)